--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         width: device-width;
       }
     </style>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="vendor/reset.min.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -33,25 +39,40 @@
         </div>
       </div>
       <div class="tip">
-        <p>Click to sign up!</p>
+        <p>View Board One</p>
       </div>
-      <div class="content">
-        <div class="image-wrapper">
-          <img src="img/marzipano.png" />
-        </div>
-        <div class="content-form">
-          <p>Fill the form and we'll open the spam!</p>
-          <div>
-            <input id="email" type="text" placeholder="Email" />
+    </div>
+    <script src="js/info.js"></script>
+
+    <div id="boardOne" class="modal" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Modal title</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
           </div>
-          <p>Just kidding, this doesn't do anything</p>
-        </div>
-        <div class="button_wrapper">
-          <button class="close">Close</button>
+          <div class="modal-body">
+            <p>Modal body text goes here.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary">Save changes</button>
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
         </div>
       </div>
     </div>
-    s
-    <script src="js/info.js"></script>
   </body>
 </html>
