--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         id="youtube"
         width="1280"
         height="480"
-        src="https://www.youtube.com/watch?v=XvRrHUvkbJc"
+        src="https://www.youtube.com/embed/XvRrHUvkbJc"
         frameborder="0"
         allowfullscreen
       ></iframe>
