--- a/index.html
+++ b/index.html
@@ -56,15 +56,6 @@
         </div>
       </div>
     </div>
-    <div id="video">
-      <iframe
-        id="youtube"
-        width="1280"
-        height="480"
-        src="https://www.youtube.com/embed/XvRrHUvkbJc"
-        frameborder="0"
-        allowfullscreen
-      ></iframe>
-    </div>
+    <div id="video"></div>
   </body>
 </html>
