--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
         </div>
       </div>
     </div>
-    <div id="video"></div>
+    <div id="videoContainer"></div>
+
+    <script src="js/video.js"></script>
   </body>
 </html>
