--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
     </div>
     <script src="js/info.js"></script>
 
+    <div id="loadingModal" class="modalOpen">
+      <!-- Modal content -->
+      <div class="modal-content">
+        <div class="buttonholder">
+          <button onclick="hideModal()">Get Started</button>
+        </div>
+      </div>
+    </div>
+
     <div id="welcomeModal" class="modal">
       <!-- Modal content -->
       <div class="modal-content">
