--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <!-- Modal content -->
       <div class="modal-content">
         <div class="buttonholder">
-          <button onclick="hideModal()">Get Started</button>
+          <button onclick="hideloadingModal()">Get Started</button>
         </div>
       </div>
     </div>
