--- a/index.html
+++ b/index.html
@@ -35,11 +35,7 @@
 
     <div id="info">
       <div class="icon_wrapper">
-        <div class="icon">
-          <div id="inner_icon" class="inner_icon">
-            <div class="icon1"></div>
-            <div class="icon2"></div>
-          </div>
+        <h1>Click Here</h1>
         </div>
       </div>
       <div class="tip">
