--- a/index.html
+++ b/index.html
@@ -35,11 +35,8 @@
 
     <div id="info">
       <div class="icon_wrapper">
-        <h1>Click Here</h1>
+        <img src="img/info.svg" alt="information button">
         </div>
-      </div>
-      <div class="tip">
-        <p>View Board One</p>
       </div>
     </div>
     <script src="js/info.js"></script>
