--- a/index.html
+++ b/index.html
@@ -303,8 +303,32 @@
     <div id="loadingModal" class="modalOpen">
       <!-- Modal content -->
       <div class="modal-content">
+        <h1>Welcome</h1>
+        <p>
+          To demonstrate our capabilities for creating an online, 3D,
+          interactive, virtual public exhibition, Lexington Communications has
+          prepared a mock-up of a hall that could be used for a McDonald's
+          consultation
+        </p>
+        <p>
+          It features a playable video, interactive board content that can be
+          accessed by clicking the 'info' buttons and more. Every element, from
+          the floor, to the room, to the people attending can be customised to
+          fit your exact preferences.
+        </p>
+        <p>
+          Lexington's in-house team of designers and web developers create these
+          bespoke rooms to meet your specifications. They are designed to work
+          on all browsers and devices meaning our consultations are inclusive
+          and robust.
+        </p>
+        <p>
+          If you'd like to learn more, you can contact Lexington North's Digital
+          Lead, Ben Miller at
+          <a href="mailto:ben.miller@lexcomm.co.uk">ben.miller@lexcomm.co.uk</a>
+        </p>
         <div class="buttonholder">
-          <button onclick="hideloadingModal()">Get Started</button>
+          <button onclick="hideloadingModal()">Look Around</button>
         </div>
       </div>
     </div>
@@ -312,8 +336,42 @@
     <div id="welcomeModal" class="modal">
       <!-- Modal content -->
       <div class="modal-content">
+        <div class="BoardHeader">
+          <div class="logo">
+            <svg
+              id="Layer_1"
+              data-name="Layer 1"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 2500 1999.9"
+            >
+              <defs>
+                <style>
+                  .cls-1 {
+                    fill: #ffc300;
+                  }
+                </style>
+              </defs>
+              <path
+                class="cls-1"
+                d="M1642.89,142.92c197.21,0,357.1,831.42,357.1,1857h285.74C2285.73,895.42,1997.89.05,1642.9.05c-202,0-382.18,269.09-500,689.88C1025.09,269.14,844.83.05,642.86.05,287.88.05,0,895.42,0,2000H285.78c0-1025.61,159.9-1857,357.08-1857s357.19,767.47,357.19,1714.23h285.68c0-946.76,159.91-1714.23,357.16-1714.23m785.86,1714.23c38.76,0,71.25,30.69,71.25,71.06,0,41-32.49,71.72-71.25,71.72s-71.65-30.72-71.65-71.72c0-40.37,32.76-71.06,71.65-71.06m0,132.36c32.83,0,58.32-26.38,58.32-61.27,0-34.29-25.51-60.63-58.32-60.63-33.23,0-58.69,26.34-58.69,60.63C2370.05,1963.13,2395.52,1989.51,2428.75,1989.51ZM2401,1886.75h32.19c19.7,0,29,7.84,29,23.83,0,15.09-9.41,21.39-21.75,22.7l23.7,36.91h-13.91l-22.58-35.9H2414v35.9h-13l0-83.44Zm13,37.07h13.5c11.36,0,21.83-.57,21.83-13.79,0-11.1-9.49-12.84-18.22-12.84H2414l0,26.63Z"
+                transform="translate(0 -0.05)"
+              />
+            </svg>
+          </div>
+          <h1>Example Board Content</h1>
+        </div>
+
+        <p>
+          In a live version, clicking on the information box will bring up the
+          content that is displayed on the board in the room.
+        </p>
+        <p>
+          We can include dynamic interactive content and videos alongisde
+          traditional images and text content.
+        </p>
+
         <div class="buttonholder">
-          <button onclick="hideModal()">Let's Begin</button>
+          <button onclick="hideModal()">Back to the Room</button>
         </div>
       </div>
     </div>
