--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <script src="vendor/marzipano.js"></script>
     <script src="index.js"></script>
 
+    <!--
     <div id="info">
       <div class="icon_wrapper">
         <svg
@@ -299,42 +300,10 @@
       </div>
     </div>
     <script src="js/info.js"></script>
-
-    <div id="loadingModal" class="modalOpen">
-      <!-- Modal content -->
-      <div class="modal-content">
-        <h1>Welcome</h1>
-        <p>
-          To demonstrate our capabilities for creating an online, 3D,
-          interactive, virtual public exhibition, Lexington Communications has
-          prepared a mock-up of a hall that could be used for a McDonald's
-          consultation
-        </p>
-        <p>
-          It features a playable video, interactive board content that can be
-          accessed by clicking the 'info' buttons and more. Every element, from
-          the floor, to the room, to the people attending can be customised to
-          fit your exact preferences.
-        </p>
-        <p>
-          Lexington's in-house team of designers and web developers create these
-          bespoke rooms to meet your specifications. They are designed to work
-          on all browsers and devices meaning our consultations are inclusive
-          and robust.
-        </p>
-        <p>
-          If you'd like to learn more, you can contact Lexington North's Digital
-          Lead, Ben Miller at
-          <a href="mailto:ben.miller@lexcomm.co.uk">ben.miller@lexcomm.co.uk</a>
-        </p>
-        <div class="buttonholder">
-          <button onclick="hideloadingModal()">Look Around</button>
-        </div>
-      </div>
-    </div>
+  
 
     <div id="welcomeModal" class="modal">
-      <!-- Modal content -->
+    Modal content
       <div class="modal-content">
         <div class="BoardHeader">
           <div class="logo">
@@ -376,6 +345,8 @@
       </div>
     </div>
     <div id="videoContainer"></div>
+
+  -->
 
     <script src="js/video.js"></script>
   </body>
